--- a/stack-7.10.yaml
+++ b/stack-7.10.yaml
@@ -1,8 +1,11 @@
 packages:
 - '.'
 extra-deps:
+  - directory-1.2.7.1
   - gtk-traymanager-0.1.6
-  - xmonad-contrib-0.12
+  - xmonad-0.13
+  - xmonad-contrib-0.13
+  - X11-1.8
   - X11-xft-0.3.1
   - gtk-0.13.9
 resolver: lts-6.26
